# arr-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.test  CLAUDE.md  CONTRIBUTING.md  Containerfile  LICENSE  Makefile  README.md  compose.yaml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: review.md  test.md  validate.md
.claude/memory/: MEMORY.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/development-workflow/: SKILL.md
.claude/skills/manual-testing/: SKILL.md
.claude/skills/phase-management/: SKILL.md
.claude/skills/phase-management/references/: phase-definitions.md
.claude/skills/testing/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  docs.yml  static.yml
docs/: architecture.md  configuration.md  contributing.md  dashboard-mockup-infra-v2.html  dashboard-mockup.html  getting-started.md  index.md  lessons-learned.md  roadmap.md  security.md  tools.md
docs/adr/: 0001-filesystem-ownership-scoping.md  0002-host-side-helper-agent.md  0003-frontend-strategy.md  0004-supported-runtime-configurations.md  0005-ai-provider-strategy.md  0006-user-interest-model.md  0007-shared-service-layer.md  0008-authentication-strategy.md  index.md
docs/overrides/: home.html
docs/specs/: doc-roadmap.md  spec-011-file-delete.md  spec-013-host-side-helper.md  spec-014-dashboard.md  spec-017-compose-quadlet-conversion.md
docs/stylesheets/: extra.css
scripts/: install.sh  seed_interest_cache.py  seed_users.py  smoke.ps1  smoke.sh  test-deploy.sh  test-stack.sh  uninstall.sh
src/arr_helper/: __init__.py  __main__.py  handlers.py  server.py  subprocess.py  validation.py
src/arr_mcp/: __init__.py  config.py  server.py
src/arr_mcp/ai/: __init__.py  anthropic.py  null.py  ollama.py  provider.py
src/arr_mcp/dashboard/: __init__.py  auth.py  data.py  diagnose.py  routes.py
src/arr_mcp/dashboard/static/: style.css
src/arr_mcp/dashboard/templates/: index.html  link_plex.html  setup.html  signin.html
src/arr_mcp/helper/: __init__.py  client.py
src/arr_mcp/runtime/: __init__.py  client.py  detector.py
src/arr_mcp/services/: __init__.py  arr.py  base.py  credentials.py  interests.py  models.py  plex.py  radarr.py  registry.py  sabnzbd.py  sonarr.py  users.py
src/arr_mcp/tasks/: alerts.py  media_interest.py  versions.py
src/arr_mcp/tools/: __init__.py  alerts.py  containers.py  conversion.py  credentials.py  diagnostics.py  filesystem.py  interests.py  logs.py  media.py  plex.py  reachability.py  services.py  stacks.py  utils.py  versions.py  watched_cleanup.py
test-stack/: .env.example  compose.yaml  seed-media.sh
test-stack/seed/: credentials.local.json
test-stack/seed/radarr/: config.xml
test-stack/seed/sonarr/: config.xml
tests/: conftest.py  test_ai_provider.py  test_alerts.py  test_api_reachability.py  test_auth.py  test_base_service_client.py  test_containers.py  test_conversion.py  test_credentials.py  test_dashboard.py  test_dashboard_data.py  test_db_reads.py  test_detector.py  test_diagnostics.py  test_download_path_verification.py  test_filesystem.py  test_health.py  test_inter_service_reachability.py  test_interests.py  test_logs.py  test_media_interest.py  test_movie_watched_cleanup.py  test_plex_auth.py  test_plex_client.py  test_reachability.py  test_sabnzbd_client.py  test_services.py  test_sonarr_radarr_clients.py  test_stacks.py  test_users.py  test_versions.py  test_watched_cleanup.py
tests/e2e/: conftest.py  fake_docker_api.py  test_adversarial.py  test_tools_e2e.py
tests/helper/: test_client.py  test_handlers.py  test_validation.py
tests/smoke/: conftest.py  test_packaging.py  test_server_smoke.py
