[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arr-mcp-server"
version = "0.2.1"
description = "MCP server for natural language management of home media server stacks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "anyio>=4.0.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
arr-mcp = "arr_mcp.server:main"
arr-agent = "arr_helper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arr_mcp", "src/arr_helper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: end-to-end smoke tests (require uv build; excluded from default CI run)",
]
